k8s/data-capture-rightmove-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-capture-rightmove-service
  labels:
    app: data-capture-rightmove-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-capture-rightmove-service
  template:
    metadata:
      labels:
        app: data-capture-rightmove-service
    spec:
      containers:
        - name: data-capture-rightmove-service
          image: ${DOCKER_IMAGE_TAG}
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 20
