k8s/data-capture-rightmove-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-capture-rightmove-service
  labels:
    app: data-capture-rightmove-service
spec:
  selector:
    app: data-capture-rightmove-service
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  type: ClusterIP
