k8s/data-capture-rightmove-service/ingress.yaml
# k8s/data-capture-rightmove-service/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-capture-rightmove-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ${DATA_CAPTURE_RIGHTMOVE_DOMAIN} # This will be replaced by the CI/CD pipeline
      secretName: data-capture-rightmove-tls
  rules:
    - host: ${DATA_CAPTURE_RIGHTMOVE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-capture-rightmove-service
                port:
                  number: 80
